# mestrado

./: .gitignore  README.md  refactoring.md  todo.md
libs/: CMakeLists.txt  measurement_analysis.py
libs/nsga/: CMakeLists.txt  nsgaii.cpp  nsgaii.h  util.cpp  util.h
libs/nsga_mmurp/: CMakeLists.txt  mmurp.cpp  mmurp.h  mommurp_post_proc.cpp  nsgaii.cpp  nsgaii.h  nsgaii_mmurp.cpp  nsgaii_mmurp.h  permutation.cpp  random_generation.cpp  random_generation.h  read_instance.cpp  read_instance.h  refactoring.cpp  seeds.cpp  seeds.h  util_vrp.cpp
libs/read_instance/: CMakeLists.txt  mmurp.cpp  mmurp.h  mmurp_data.cpp  mmurp_data.h  util.cpp  util.h
libs/splitting/: CMakeLists.txt  README.md  comparing.cpp  label.cpp  label.h  mommurp.cpp  mommurp.h  util.cpp  util.h
libs/splitting/tests/: CMakeLists.txt  label_test.cc  splitting_test.cc  util.cpp  util.h
libs/utils/: CMakeLists.txt  performance.cpp  performance.h
roteamento-carretas-da-mamografia/: Dockerfile.optimizer-python-mip  create_instances.sh  docker-compose_optimizer-python-mip.yml  requirements.txt  run_tests.sh  setup.sh
roteamento-carretas-da-mamografia/Instancias/: ES-n78-m2-Q10138.txt  ES-n78-m2-Q10138_with_depot.txt  MG-n-m-Q10138.txt  mg-city-names.csv  mg-city-names_cleaned.csv
roteamento-carretas-da-mamografia/Instancias/Vrp-Set-A/: A-n100-m2-Q100.vrp  A-n100-m2-Q200.vrp  A-n100-m3-Q100.vrp  A-n100-m4-Q100.vrp  A-n160-m4-Q60.vrp  A-n240-m6-Q60.vrp  A-n249-m2-Q500.vrp  A-n249-m3-Q500.vrp  A-n249-m4-Q500.vrp  A-n249-m5-Q500.vrp  A-n50-m4-Q160.vrp  A-n50-m4-Q80.vrp  A-n75-m5-Q140.vrp  A-n80-m2-Q60.vrp
roteamento-carretas-da-mamografia/Instancias/old_testing_instances/MG/: MG-n-m-Q10138-v10.txt  MG-n-m-Q10138-v20.txt  MG-n-m-Q10138-v25.txt  MG-n-m-Q10138-v30.txt  MG-n-m-Q10138-v40.txt
roteamento-carretas-da-mamografia/Instancias/old_testing_instances/Vrp-Set-A_25p/: A-n240-m6-Q60-v6.vrp  A-n249-m3-Q500-v7.vrp  A-n80-m2-Q60-v2.vrp
roteamento-carretas-da-mamografia/Instancias/organizar/: A-n80-m2  MG-n-m-Q10138_pre_process.txt  instances.sh
roteamento-carretas-da-mamografia/Instancias/organizar/old_testing_instances/MG/: MG-n-m-Q10138-v15.txt  MG-n-m-Q10138-v35.txt
roteamento-carretas-da-mamografia/Instancias/organizar/old_testing_instances/Vrp-Set-A_25p/: A-n100-m2-Q100-v4.vrp  A-n100-m2-Q200-v2.vrp  A-n100-m3-Q100-v4.vrp  A-n100-m4-Q100-v4.vrp  A-n160-m4-Q60-v4.vrp  A-n249-m2-Q500-v7.vrp  A-n249-m4-Q500-v7.vrp  A-n249-m5-Q500-v7.vrp  A-n50-m4-Q160-v2.vrp  A-n50-m4-Q80-v3.vrp  A-n75-m5-Q140-v3.vrp
roteamento-carretas-da-mamografia/notebooks/: MDOVRP-MO_encapsulating-model.ipynb  MDOVRP_encapsulating-model.ipynb  MDOVRP_v0.0.1.ipynb  MDOVRP_v0.0.2.ipynb  MDOVRP_v0.0.3.ipynb  MDOVRP_v0.0.4.ipynb  MDOVRP_v0.0.5.ipynb  MDOVRP_v0.0.6.ipynb  MDOVRP_v0.0.7.ipynb  MDOVRP_v0.0.8.ipynb  gerando-reports.ipynb  hypervolume-calc.ipynb  nsga-measurement.ipynb  plotting.ipynb
roteamento-carretas-da-mamografia/reports/: mdovrp.graphml  mdovrp.v0.0.0.graphml  mdvrp.graphml  vrp.graphml
roteamento-carretas-da-mamografia/resultados/: ES-n78-m2-Q10138_with_depot.csv
roteamento-carretas-da-mamografia/src/: modelo_teste.py  read_instance.py
roteamento-carretas-da-mamografia/src/cpp/: CMakeLists.txt  fibo  fibo.cpp  fibo.h  label_test.cc
roteamento-carretas-da-mamografia/src/cpp/include/: nsgaii.h  nsgaii_mmurp.h  permutation.h  read_instance.h  util.h  util_print.h
roteamento-carretas-da-mamografia/src/cpp/src/: mmurp.cpp  mommurp.cpp  mommurp_post_proc.cpp  nsgaii.cpp  nsgaii_mmurp.cpp  nsgaii_mmurp.h  nsgaii_real.cpp  permutation.cpp  playground.cpp  read_instance.cpp  testing.cpp  util.cpp  util_print.cpp  util_vrp.h
roteamento-carretas-da-mamografia/src/python/: build_instances.py  calculate_hypervol.py  mmurp_instance.py  mo.py  read_instance.py  run_experiments.py  run_mmurp_model.py  run_pos_process.py  util_argparse.py  util_experiments.py  util_logging.py  util_plotting.py
roteamento-carretas-da-mamografia/src/python/models/: model_MDOVRP_MO.py  model_MMURP.py
roteamento-carretas-da-mamografia/tuning/: instances-list.txt  parameters.txt  scenario.txt  target-runner
roteamento-carretas-da-mamografia/tuning/instances/: copy_instances.sh
